<resources>

    <!-- No son traducibles a otros idiomas-->
    <string name="app_name">Beer Finder Beta</string>
    <string name="title_activity_maps">Beer Finder</string>
    <string name="facebook_app_id">0918273645</string>
    <string name="fb_login_protocol_scheme">fb0918273645</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="textview">TextView</string>
    <!--    Si se modifica el formato no funciona. Tener cuidado del orden y que siempre quede 1 y luego 2 en caso de ser multiples coordenadas-->
    <string name="marker_latlng"> </string>
    <string name="marker_lat">%1$.14f</string>
    <string name="marker_lng">%1$.14f</string>


    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvidoContrasena">Olvidaste tu Contraseña?</string>
    <string name="accesar">Accesar</string>
    <string name="escribaUsuario">Escriba su nombre de usuario...</string>
    <string name="email">Correo Electronico</string>
    <string name="confirmarContrasena">Confirmar Contraseña</string>
    <string name="telefono">Telefono</string>
    <string name="registrarse">Registrarse</string>


    <string name="title_activity_mapa_general">Mapa</string>
    <string name="title_activity_menu_desplegable">MenuDesplegable</string>
    <string name="action_settings">Ajustes</string>
    <string name="dialog_creando_nuevo_lugar">Creando nuevo lugar</string>
    <string name="hecho">Realizado</string>
    <string name="dato_agregado">Informacion agregado</string>
    <string name="dato_no_agregado">Informacion no agregado</string>
    <string name="autenticando">Autenticando...</string>
    <string name="user_pass_incorrectos">Usuario o contraseña incorrectos</string>
    <string name="cargando">Cargando...</string>
    <string name="no_localizable">No pudimos localizarte, utilizaremos UTCH como referencia</string>
    <string name="sin_permisos">La aplicacion no tiene permiso de usar tu ubicación se utilizará</string>
    <string name="utch_referencia">UTCH como referencia</string>
    <string name="website">Website</string>
    <string name="cerrar">Cerrar</string>
    <string name="pass_no_coincide">Contraseña no coincide. Verificar contraseña nuevamente</string>
    <string name="creando_usuario">Creando nuevo usuario</string>
    <string name="usuario_registrado">Usuario Registrado</string>
    <string name="usuario_no_registrado">Usuario no Registrado</string>
    <string name="lugar">Lugar</string>
    <string name="horario">Horario</string>
    <string name="descripcion">Descripcion</string>
    <string name="confirmar_marcador">Confirmar Marcador</string>
    <string name="agregar_ubicacion">Agregar Ubicacion</string>
    <string name="recuperar_pass">Recuperar Contraseña</string>
    <string name="user">Usuario</string>
    <string name="correo_e">Correo Electronico</string>
    <string name="introducir_nombre">Introducir nombre de usuario</string>
    <string name="introducir_email">Introducir correo electronico</string>
    <string name="enviar">Enviar</string>
    <string name="tipo">Tipo:</string>
    <string name="cervecera">Cervecera:</string>
    <string name="mas">Mas...</string>
    <string name="alcohol">% Alcohol:</string>
    <string name="bienvenido_a">Bienvenido a Beer Finder</string>
    <string name="menu_nombre">Menu Nombre</string>
    <string name="direccion">Direccion:</string>
    <string name="cervezas">Cervezas</string>
    <string name="lugares">Lugares</string>
    <string name="abrir_preferencias">Localizar</string>
    <string name="title_activity_mapa_venta">Mapa</string>
    <string name="coordenadas_guardadas">Las coordenadas han sido guardadas</string>

</resources>
