<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Recuperar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_ambar"
    tools:context="mx.netsquare.beerfindebeta.Recuperar"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">


    <Button
        android:id="@+id/button3"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:layout_marginTop="334dp"
        android:background="@color/accent"
        android:text="@string/enviar"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="83dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="80dp"
        android:text="@string/recuperar_pass"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="143dp"
        android:text="@string/user"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@color/common_google_signin_btn_text_dark_pressed"
        android:ems="10"
        android:hint="@string/introducir_nombre"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="222dp"
        android:text="@string/correo_e"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="-8dp"
        android:layout_marginTop="89dp"
        android:background="@color/common_google_signin_btn_text_dark_pressed"
        android:ems="10"
        android:hint="@string/introducir_email"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
